--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,20 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'inter';
+  src: url('/assets/fonts/inter/static/Inter_18pt-Regular.ttf') format('truetype');
+  font-weight: regular;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'inter';
+  src: url('/assets/fonts/inter/static/Inter_18pt-SemiBold.ttf') format('truetype');
+  font-weight: semi-bold;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -43,4 +57,111 @@ h1 {
   color: var(--neutral-900);
   line-height: 120%;
   letter-spacing: -2px;
+}
+
+
+.row {
+  width: 100%;
+  max-width: 1170px;
+}
+
+.header {
+  background-color: var(--light-salmon-50);
+}
+
+.hero {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+}
+
+.column {
+  width: 50%;
+}
+
+.hero_img {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: var(--neutral-900);
+  background-image: url('./assets/images/pattern-dark-bg.svg');
+  color: var(--neutral-0);
+  padding: 1rem;
+}
+
+.footer_section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 750px;
+  padding: 80px 0;
+  text-align: center;
+  align-content: center
+}
+
+.footer_section h2 {
+  font-family: 'martian-mono', sans-serif;
+  font-size: 50px;
+  font-weight: semi-bold;
+  line-height: 130%;
+  letter-spacing: -2px;
+  color: var(--neutral-100);
+  padding: 0 34px;
+}
+
+.footer_section button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--neutral-900);
+  color: var(--neutral-100);
+  border: 1px solid var(--neutral-100);
+  padding: 16px 24px;
+  font-family: 'martian-mono', sans-serif;
+  font-weight: semi-bold;
+  font-size: 18px;
+  line-height: 130%;
+  letter-spacing: -1px;
+  text-transform: uppercase;
+  margin: 40px 0 24px 0;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 390px;
+}
+
+.footer_section button svg {
+  margin-left: 8px;
+}
+
+.footer_copyright {
+  width: 100%;
+  max-width: 1170px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 1px solid var(--neutral-700);
+  padding: 16px 0;
+  font-family: 'martian-mono', sans-serif;
+  font-weight: regular;
+  font-size: 14px;
+  line-height: 120%;
+  letter-spacing: -1px;
+}
+
+.footer_social {
+  display: flex;
+  height: 24px;
+  width: 24px;
+  margin-right: 40px;
+  gap: 24px;
 }
