--- a/styles.css
+++ b/styles.css
@@ -63,25 +63,48 @@ h1 {
 .row {
   width: 100%;
   max-width: 1170px;
+  margin: 0 auto;
 }
 
-.header {
+header {
+  padding: 2rem 0;
   background-color: var(--light-salmon-50);
+  background-image: url('./assets/images/pattern-light-bg.svg');
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url('./assets/images/pattern-light-bg.svg');
+  background-color: var(--light-salmon-50);
+}
+
+.column {
+  width: 100%;
+  max-width: 570px;
 }
 
 .hero {
   display: flex;
-  height: 100vh;
-  justify-content: center;
+  height: 90vh;
+  width: 100%;
+  padding: 40px 0 80px 0;
 }
 
-.column {
-  width: 50%;
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 570px;
+  padding: 60px 0;
+  margin-right: 64px;
 }
 
 .hero_img {
   width: 100%;
   height: 600px;
+  border-radius: 8px;
   object-fit: cover;
 }
 
